Add the insights contrib package for data analysis
This commit has been originally authored by @laurencer.

--- a/src/mlio-py/CMakeLists.txt
+++ b/src/mlio-py/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(mlio/core)
 
 if(MLIO_INCLUDE_CONTRIB)
+    add_subdirectory(mlio/contrib/insights)
 endif()
 
 if(MLIO_INCLUDE_ARROW_INTEGRATION)
