--- a/src/mlio-py/mlio/integ/arrow/CMakeLists.txt
+++ b/src/mlio-py/mlio/integ/arrow/CMakeLists.txt
@@ -2,13 +2,13 @@
 # Target: mlio-py-arrow
 # ------------------------------------------------------------
 
-add_python_extension(mlio-py-arrow arrow
+add_python_extension(mlio-arrow arrow
     arrow_buffer.cxx
     arrow_file.cxx
     module.cxx
 )
 
-target_link_libraries(mlio-py-arrow
+target_link_libraries(mlio-arrow
     PRIVATE
         arrow_shared mlio::mlio
 )
