--- a/packaging/conda/recipe/meta.yaml
+++ b/packaging/conda/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.3.1.dev' %}
+{% set version = '0.3.1' %}
 
 {% if version.endswith('.dev') %}
     {% set version = version + os.getenv('MLIO_BUILD_NUMBER', '0') %}
