Add support for split records in default_instance_reader. Add unit-test for recordio_protobuf_reader.

--- a/tests/mlio-test/CMakeLists.txt
+++ b/tests/mlio-test/CMakeLists.txt
@@ -3,7 +3,8 @@
 # ------------------------------------------------------------
 
 add_executable(mlio-test
-    test_text_line_reader.cxx)
+    test_text_line_reader.cxx
+	test_recordio_protobuf_reader.cxx)
 
 target_include_directories(mlio-test
     PRIVATE
