Introduce Amazon S3 support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,8 @@ cmake_dependent_option(
 option(MLIO_INCLUDE_TESTS "If set, generates build target for the tests." ON)
 option(MLIO_INCLUDE_DOC "If set, generates build target for the documentation.")
 
+option(MLIO_BUILD_S3_SUPPORT "If set, builds with Amazon S3 support.")
+
 option(MLIO_TREAT_WARNINGS_AS_ERRORS "If set, treats compilation warnings as errors.")
 
 # Optimizations
@@ -74,9 +76,9 @@ include(GNUInstallDirs)
 add_compile_definitions(MLIO_COMPILE_LIB)
 
 if(BUILD_SHARED_LIBS)
-    set(MLIO_STATIC_LIB FALSE)
+    set(MLIO_STATIC_LIB OFF)
 else()
-    set(MLIO_STATIC_LIB TRUE)
+    set(MLIO_STATIC_LIB ON)
 endif()
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
@@ -297,6 +299,10 @@ if(MLIO_INCLUDE_LIB)
     find_package(TBB 2019.0 REQUIRED CONFIG COMPONENTS tbb)
     find_package(Threads REQUIRED)
     find_package(ZLIB REQUIRED)
+
+    if(MLIO_BUILD_S3_SUPPORT)
+        find_package(AWSSDK 1.7 REQUIRED CONFIG COMPONENTS s3)
+    endif()
 
     if(MLIO_INCLUDE_TESTS)
         find_package(GTest REQUIRED)
