Introduce support for reading image datasets  (#14)
Implement image reader

--- a/src/mlio/CMakeLists.txt
+++ b/src/mlio/CMakeLists.txt
@@ -33,6 +33,7 @@ add_library(mlio
     record_readers/detail/in_memory_chunk_reader.cxx
     record_readers/detail/recordio_header.cxx
     record_readers/detail/text_line.cxx
+    record_readers/blob_record_reader.cxx
     record_readers/csv_record_reader.cxx
     record_readers/parquet_record_reader.cxx
     record_readers/record_error.cxx
@@ -67,6 +68,7 @@ add_library(mlio
     device_array.cxx
     device.cxx
     example.cxx
+    image_reader.cxx
     init.cxx
     init_aws.cxx
     instance_batch_reader.cxx
@@ -127,6 +129,17 @@ if(MLIO_BUILD_S3_SUPPORT)
         PRIVATE
             aws-cpp-sdk-core aws-cpp-sdk-s3
     )
+endif()
+
+if(MLIO_BUILD_IMAGE_READER)
+    target_compile_definitions(mlio
+        PUBLIC
+            MLIO_BUILD_IMAGE_READER
+     )
+
+    target_link_libraries(mlio
+        PRIVATE
+            opencv_core opencv_imgcodecs opencv_imgproc)
 endif()
 
 set_target_properties(mlio PROPERTIES
