--- a/packaging/conda/recipe/meta.yaml
+++ b/packaging/conda/recipe/meta.yaml
@@ -34,6 +34,7 @@ outputs:
       host:
         - aws-sdk-cpp
         - libiconv
+        - libopencv
         - libprotobuf
         - tbb-devel
         - zlib
