--- a/src/mlio/CMakeLists.txt
+++ b/src/mlio/CMakeLists.txt
@@ -79,6 +79,7 @@ add_library(mlio
     not_supported_error.cxx
     parallel_data_reader.cxx
     parser.cxx
+    ranged_instance_reader.cxx
     recordio_protobuf_reader.cxx
     s3_client.cxx
     sampled_instance_reader.cxx
