Replace strverscmp with natsort to support macOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -284,6 +284,7 @@ find_package(fmt 6.0 REQUIRED CONFIG)
 if(MLIO_INCLUDE_LIB)
     find_package(absl REQUIRED CONFIG)
     find_package(Iconv REQUIRED)
+    find_package(natsort REQUIRED CONFIG)
     find_package(Protobuf 3.8 REQUIRED)
     find_package(TBB 2019.0 REQUIRED CONFIG COMPONENTS tbb)
     find_package(Threads REQUIRED)
