--- a/src/mlio-config.cmake.in
+++ b/src/mlio-config.cmake.in
@@ -9,6 +9,7 @@ if(@MLIO_STATIC_LIB@)
     find_dependency(dlpack 0.1.0)
     find_dependency(fmt 6.0)
     find_dependency(IConv)
+    find_dependency(natsort)
     find_dependency(Protobuf 3.8)
     find_dependency(TBB COMPONENTS tbb)
     find_dependency(Threads)
