Use GNU include directory for installs

--- a/src/mlio/CMakeLists.txt
+++ b/src/mlio/CMakeLists.txt
@@ -179,7 +179,7 @@ install(
         COMPONENT
             devel
     INCLUDES DESTINATION
-        include
+        ${CMAKE_INSTALL_INCLUDEDIR}
 )
 
 install(
