--- a/src/mlio/CMakeLists.txt
+++ b/src/mlio/CMakeLists.txt
@@ -40,7 +40,6 @@ add_library(mlio
     record_readers/detail/in_memory_chunk_reader.cxx
     record_readers/detail/recordio_header.cxx
     record_readers/detail/text_line.cxx
-    record_readers/blob_record_reader.cxx
     record_readers/csv_record_reader.cxx
     record_readers/parquet_record_reader.cxx
     record_readers/record_error.cxx
@@ -78,6 +77,8 @@ add_library(mlio
     image_reader.cxx
     init.cxx
     init_aws.cxx
+    instance.cxx
+    instance_batch.cxx
     instance_batch_reader.cxx
     logger.cxx
     mlio_error.cxx
