--- a/conda-env.yml
+++ b/conda-env.yml
@@ -10,6 +10,8 @@ dependencies:
   - libiconv=1.15
   - libopencv=4.2.0
   - libprotobuf=3.11.0
+  - ninja=1.9.0
+  - pytest=5.4.1
   - python=3.7
   - tbb-devel=2019.8
   - zlib=1.2
