--- a/conda-env.yml
+++ b/conda-env.yml
@@ -7,6 +7,7 @@ dependencies:
   - cmake=3.15
   - compilers
   - doxygen=1.8
+  - flake8=3.8.1
   - libiconv=1.15
   - libopencv=4.2.0
   - libprotobuf=3.11.0
