--- a/conda-env.yml
+++ b/conda-env.yml
@@ -1,12 +1,14 @@
 name: mlio-devel
 channels:
   - conda-forge
+  - pytorch
 dependencies:
   - arrow-cpp=0.16.0
-  - aws-sdk-cpp=1.7
+  - aws-sdk-cpp=1.7.164
+  - boto3=1.14.0
   - cmake=3.15
   - compilers
-  - doxygen=1.8
+  - doxygen=1.8.18
   - flake8=3.8.1
   - libiconv=1.15
   - libopencv=4.2.0
@@ -14,5 +16,7 @@ dependencies:
   - ninja=1.9.0
   - pytest=5.4.1
   - python=3.7
+  - pytorch=1.5.0
   - tbb-devel=2019.8
-  - zlib=1.2
+  - torchvision=0.6.0
+  - zlib=1.2.11
